--- a/views/studentPages/addStudent.ejs
+++ b/views/studentPages/addStudent.ejs
@@ -9,7 +9,7 @@
 
 
 </head>
-<%- include("include/header");-%>
+<%- include("../include/header");-%>
 <body>
 <style>
 .form {
@@ -151,16 +151,59 @@
 
 <div   style="display:flex ; height: auto; justify-content: center;">
 
-<form class="form"  method="post" action="/subject/newSubject">
-    <p class="title">Register  New subject   </p>
-      
+
+
+<form class="form"  method="post" action="/student/newStudent">
+    <p class="title">Register  New student  </p>
+    <div class="flex">
+        <label>
+            <input class="input" type="text" placeholder="" name="firstName" required="">
+            <span>Firstname</span>
+        </label>
+
+        <label>
+            <input class="input" type="text" placeholder="" name="lastName" required="">
+            <span>Lastname</span>
+        </label>
+    </div>  
+            
     <label>
-        <input class="input" type="text" name="name" placeholder="" required="">
-        <span>Name</span>
+        <input class="input" type="email" name="email" placeholder="" required="">
+        <span>Email</span>
+    </label> 
+        
+    <label>
+        <input class="input" type="text" name="address" placeholder="" required="">
+        <span>Address</span>
     </label>
+   
+
+    <label for="cars">Choose a schoolName</label>
+     
+
+        <select name="schoolId" id="schoolId">
+                 <%data.forEach((e) => {%>
+                <option value="<%=e.id%>"><%=e.schoolName%></option>
+                 <% }) %>
+          </select>
+       
+
+    <label for="class">Choose a class</label>
+     
+    <select name="classId" id="classId">
+             <%data1.forEach((e) => {%>
+            <option value="<%=e.id%>"><%=e.name%></option>
+             <% }) %>
+      </select>
+
+     
+    
+   
+
     <button class="submit" type="submit">Submit</button>
-    <p class="signin"> <a href="/subject/display">Back</a> </p>
+    <p class="signin"> <a href="/student/display">Back</a> </p>
 </form>
 
+    
 </div>
 </html>
