--- a/views/classPages/class.ejs
+++ b/views/classPages/class.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Students List</title>
+    <title>class</title>
+    <link rel="stylesheet" href="css/f1.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <style>
@@ -51,8 +52,6 @@ tr:nth-child(even) {
         .nested-table-container.show-details {
             display: table; /* Show when class is added */
         }
-
-
         .uiverse {
   position: relative;
   background: #ffffff;
@@ -118,49 +117,41 @@ svg:hover .tooltip {
   background: linear-gradient(320deg, rgb(3, 77, 146), rgb(0, 60, 255));
   color: #ffffff;
 }
+        
     </style>
 </head>
 <body>
-<%- include("include/header");-%>
+<%- include("../include/header");-%>
 
 
-<h1 style="text-align: center;" >teacher List</h1>
+<h1 style="text-align: center;" >class list</h1>
 
 <div class="uiverse">
-    <span class="tooltip">Add new teacher </span>
+    <span class="tooltip">Add class data</span>
     <span>
-        <a href="/teacher/addTeacher">Add</a>
+        <a href="/class/addClass">Add</a>
     </span>
 </div>
 
-
     <div  id="cont">   
 
-
-
-
-    
     <table>
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Address</th>\
-                <th>className</th>
+                <th>Class Name</th>
+                <th>ScloolName</th>
                 <th>School Details</th>
                 <th>Action</th>
+
             </tr>
         </thead>
         <tbody>
-            <% data.forEach(teacher => { %>
+            <% data.forEach(student => { %>
                 <tr class="student-row">
-                    <td><%= teacher.id %></td>
-                    <td><%= teacher.name %></td>
-                    <td><%= teacher.email %></td>
-                    <td><%= teacher.address %></td>
-                    <td><%= teacher.Class.name%></td>
-
+                    <td><%= student.id %></td>
+                    <td><%= student.name %></td>
+                    <td><%= student.School.schoolName %></td>
 
                     <td>
                         <button class="toggle-details">Show Details</button>
@@ -176,22 +167,20 @@ svg:hover .tooltip {
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><%= teacher.School.schoolName %></td>
-                                        <td><%= teacher.School.address %></td>
-                                        <td><%= teacher.School.schoolEmail %></td>
-                                        <td><%= teacher.School.phoneNumber %></td>
+                                        <td><%= student.School.schoolName %></td>
+                                        <td><%= student.School.address %></td>
+                                        <td><%= student.School.schoolEmail %></td>
+                                        <td><%= student.School.phoneNumber %></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                     </td>
 
-
-                  <td > <a  style="background-color: red ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/teacher/delete/<%=teacher.id%>"> <i style="color:white;" class="fa-solid fa-trash">  Delete</i></a> 
-
-                <a  style="background-color: rgb(25, 145, 25) ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/teacher/update/<%=teacher.id%>"> <i class="fa-regular fa-pen-to-square" style="color: #fff;">update</i></a>
-
-
+                    <td > <a  style="background-color: red ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/class/delete/<%=student.id%>"> <i style="color:white;" class="fa-solid fa-trash">  Delete</i></a> 
+                        <a  style="background-color: rgb(25, 145, 25) ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/class/update/<%=student.id%>"> <i class="fa-regular fa-pen-to-square" style="color: #fff;">update</i></a></td>
+      
+                    
                 </tr>
             <% }); %>
         </tbody>
@@ -210,8 +199,7 @@ svg:hover .tooltip {
         
     </div>
 
-
-    <%- include("include/footer");-%>
+    <%- include("../include/footer");-%>
 
 
 </body>
