--- a/views/studentPages/student.ejs
+++ b/views/studentPages/student.ejs
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>class</title>
-    <link rel="stylesheet" href="css/f1.css">
+    <title>Students List</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <style>
@@ -52,6 +51,8 @@ tr:nth-child(even) {
         .nested-table-container.show-details {
             display: table; /* Show when class is added */
         }
+
+
         .uiverse {
   position: relative;
   background: #ffffff;
@@ -117,41 +118,51 @@ svg:hover .tooltip {
   background: linear-gradient(320deg, rgb(3, 77, 146), rgb(0, 60, 255));
   color: #ffffff;
 }
-        
     </style>
 </head>
 <body>
-<%- include("include/header");-%>
+<%- include("../include/header");-%>
 
 
-<h1 style="text-align: center;" >class list</h1>
+<h1 style="text-align: center;" >Students List</h1>
 
 <div class="uiverse">
-    <span class="tooltip">Add class data</span>
+    <span class="tooltip">Add new student </span>
     <span>
-        <a href="/class/addClass">Add</a>
+        <a href="/student/addStudent">Add</a>
     </span>
 </div>
 
+
     <div  id="cont">   
 
+
+
+
+    
     <table>
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Class Name</th>
-                <th>ScloolName</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>class</th>
                 <th>School Details</th>
                 <th>Action</th>
-
             </tr>
         </thead>
         <tbody>
             <% data.forEach(student => { %>
                 <tr class="student-row">
                     <td><%= student.id %></td>
-                    <td><%= student.name %></td>
-                    <td><%= student.School.schoolName %></td>
+                    <td><%= student.firstName %></td>
+                    <td><%= student.lastName %></td>
+                    <td><%= student.email %></td>
+                    <td><%= student.address %></td>
+                    <td><%= student.Class.name%></td>
+
 
                     <td>
                         <button class="toggle-details">Show Details</button>
@@ -177,10 +188,12 @@ svg:hover .tooltip {
                         </div>
                     </td>
 
-                    <td > <a  style="background-color: red ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/class/delete/<%=student.id%>"> <i style="color:white;" class="fa-solid fa-trash">  Delete</i></a> 
-                        <a  style="background-color: rgb(25, 145, 25) ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/class/update/<%=student.id%>"> <i class="fa-regular fa-pen-to-square" style="color: #fff;">update</i></a></td>
-      
-                    
+
+                  <td > <a  style="background-color: red ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/student/delete/<%=student.id%>"> <i style="color:white;" class="fa-solid fa-trash">  Delete</i></a> 
+
+                <a  style="background-color: rgb(25, 145, 25) ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/student/update/<%=student.id%>"> <i class="fa-regular fa-pen-to-square" style="color: #fff;">update</i></a>
+
+
                 </tr>
             <% }); %>
         </tbody>
@@ -199,7 +212,8 @@ svg:hover .tooltip {
         
     </div>
 
-    <%- include("include/footer");-%>
+
+    <%- include("../include/footer");-%>
 
 
 </body>
