--- a/views/teacherPages/teacher.ejs
+++ b/views/teacherPages/teacher.ejs
@@ -121,15 +121,15 @@ svg:hover .tooltip {
     </style>
 </head>
 <body>
-<%- include("include/header");-%>
+<%- include("../include/header");-%>
 
 
-<h1 style="text-align: center;" >Students List</h1>
+<h1 style="text-align: center;" >teacher List</h1>
 
 <div class="uiverse">
-    <span class="tooltip">Add new student </span>
+    <span class="tooltip">Add new teacher </span>
     <span>
-        <a href="/student/addStudent">Add</a>
+        <a href="/teacher/addTeacher">Add</a>
     </span>
 </div>
 
@@ -144,24 +144,22 @@ svg:hover .tooltip {
         <thead>
             <tr>
                 <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th>Full Name</th>
                 <th>Email</th>
-                <th>Address</th>
-                <th>class</th>
+                <th>Address</th>\
+                <th>className</th>
                 <th>School Details</th>
                 <th>Action</th>
             </tr>
         </thead>
         <tbody>
-            <% data.forEach(student => { %>
+            <% data.forEach(teacher => { %>
                 <tr class="student-row">
-                    <td><%= student.id %></td>
-                    <td><%= student.firstName %></td>
-                    <td><%= student.lastName %></td>
-                    <td><%= student.email %></td>
-                    <td><%= student.address %></td>
-                    <td><%= student.Class.name%></td>
+                    <td><%= teacher.id %></td>
+                    <td><%= teacher.name %></td>
+                    <td><%= teacher.email %></td>
+                    <td><%= teacher.address %></td>
+                    <td><%= teacher.Class.name%></td>
 
 
                     <td>
@@ -178,10 +176,10 @@ svg:hover .tooltip {
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><%= student.School.schoolName %></td>
-                                        <td><%= student.School.address %></td>
-                                        <td><%= student.School.schoolEmail %></td>
-                                        <td><%= student.School.phoneNumber %></td>
+                                        <td><%= teacher.School.schoolName %></td>
+                                        <td><%= teacher.School.address %></td>
+                                        <td><%= teacher.School.schoolEmail %></td>
+                                        <td><%= teacher.School.phoneNumber %></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -189,9 +187,9 @@ svg:hover .tooltip {
                     </td>
 
 
-                  <td > <a  style="background-color: red ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/student/delete/<%=student.id%>"> <i style="color:white;" class="fa-solid fa-trash">  Delete</i></a> 
+                  <td > <a  style="background-color: red ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/teacher/delete/<%=teacher.id%>"> <i style="color:white;" class="fa-solid fa-trash">  Delete</i></a> 
 
-                <a  style="background-color: rgb(25, 145, 25) ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/student/update/<%=student.id%>"> <i class="fa-regular fa-pen-to-square" style="color: #fff;">update</i></a>
+                <a  style="background-color: rgb(25, 145, 25) ;padding: 8px;  box-shadow: 0px 1px 1px 1px ;"  href="/teacher/update/<%=teacher.id%>"> <i class="fa-regular fa-pen-to-square" style="color: #fff;">update</i></a>
 
 
                 </tr>
@@ -213,7 +211,7 @@ svg:hover .tooltip {
     </div>
 
 
-    <%- include("include/footer");-%>
+    <%- include("../include/footer");-%>
 
 
 </body>
